# fimfic-tracker-legacy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
fimfic_tracker/: __main__.py  config.py  confreader.py  constants.py  default_config.py  exceptions.py  funcs.py
