[tool.poetry]
name = "fimfic-tracker"
version = "0.1.0"
description = "An unnecessary CLI application for tracking stories on Fimfiction."
authors = ["ZodiacalComet <zodiacalcomet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"
colorama = {version = "^0.4.3", platform = "win32"}

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
flake8-bugbear = "^20.1.4"
black = "^19.10b0"
isort = "^4.3.21"
seed-isort-config = "^2.1.1"
pre-commit = "^2.3.0"

[tool.poetry.scripts]
"fimfic-tracker" = "fimfic_tracker.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
